--- a/posts/templates/registration/login.html
+++ b/posts/templates/registration/login.html
@@ -1,17 +1,41 @@
 {%extends "base_bootstrap.html" %}
-{%block content%}
-        {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-      {% endif %}
-      
-      <form method="post" action="{% url 'login' %}">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <input type="Login" class="btn btn-primary" value="Login" />
+{% block content %}
+
+{% if form.errors %}
+<p>Your username and password didn't match. Please try again.</p>
+{% endif %}
+
+{% if next %}
+    {% if user.is_authenticated %}
+    <p>Your account doesn't have access to this page. To proceed,
+    please login with an account that has access.</p>
+    {% else %}
+    <p>Iltimos E'lon berish uchun oldin tizimga kiring</p>
+    {% endif %}
+{% endif %}
+
+<form method="post" >
+{% csrf_token %}
+<table>
+<tr>
+    <td><!-- {{ form.username.label_tag.tran }} --><strong>Telefon raqamingiz</strong></td>
+    <td>{{ form.username }}</td>
+</tr>
+<tr>
+    <td><!-- {{ form.password.label_tag }} --><strong>Parolingiz</strong></td>
+    <td>{{ form.password }}</td>
+</tr>
+</table>
+
+<input type="submit" class="btn btn-primary" value="Tizimga Kirish" />
       Ro'yxatdan o'tmaganmisiz?
-      <input value="Ro'yxatdan o'tish" class="btn btn-success" onclick="window.location.href='{% url '' %}'" />
-      <input type="hidden" name="next" value="{{ next }}" />
-      </form>
+<input value="Ro'yxatdan o'tish" class="btn btn-success" onclick="window.location.href='{% url 'signup' %}'" />
+      
+
+{# Assumes you setup the password_reset view in your URLconf #}
+<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<input type="hidden" name="next" value="{{ next }}" />
+</form>
      
       
 {%endblock%}
