--- a/posts/templates/registration/signup.html
+++ b/posts/templates/registration/signup.html
@@ -1,19 +1,8 @@
-<html>
-    <head>
-        <title>Backend
-        
-        </title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-        
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+{% extends 'base_menu.html' %}
 
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
-    
-         
-
-    </head>
+{% block content %}
  
-    <body>
+    
             <div class="container">
                      
                                            
@@ -38,7 +27,6 @@
   </form>
 
 
-            </div>
+</div>
              
-    </body>
-</html>
+{% endblock %}
