--- a/custom_auth/templates/registration/login.html
+++ b/custom_auth/templates/registration/login.html
@@ -1,4 +1,4 @@
-{%extends "base_bootstrap.html" %}
+{%extends "base_menu.html" %}
 {%block content%}
         {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
