--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -3,27 +3,67 @@
  <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
  {% endblock %} 
 {%block content%}
-<div class="container">
 
+
+
+
+<div class="container">
+        Hudud buyicha qidirish
+        <form method="GET" action="{% url 'posts:post_by_region_list' %}">
+                <select name="region" required id="id_region">
+                        <option value="" selected >--Hudud--</option>
+                      
+                        <option value="Tashkent_city" >Toshkent shahar</option>
+                      
+                        <option value="Tashkent">Toshkent viloyat</option>
+                      
+                        <option value="Nukus">Nukus</option>
+                      
+                        <option value="Urgench">Urganch</option>
+                      
+                        <option value="Bukhara">Buxoro</option>
+                      
+                        <option value="Navoiy">Navoiy</option>
+                      
+                        <option value="Termiz">Termiz</option>
+                      
+                        <option value="Qarshi">Qarshi</option>
+                      
+                        <option value="Samarkand">Samarqand</option>
+                      
+                        <option value="Guliston">Guliston</option>
+                      
+                        <option value="Djizzakh">Jizzax</option>
+                      
+                        <option value="Fergana">Farg&#x27;ona</option>
+                      
+                        <option value="Namangan">Namangan</option>
+                      
+                        <option value="Andijon">Andijon</option>
+                      
+                </select> 
+                <INPUT TYPE="SUBMIT" VALUE="Go!">
+                </form>
 {% if post_list %}
+
 <table class="table">
 <th>E'lonlar</th>
   
     <ul>
         {% for post in post_list %}
-        <tr>
-        <td>
-        <a href="{% url 'posts:post_detail' post.id %}"><img  width="40%" height="25%" src="{% url 'posts:post_picture' post.id %}"> </a>
-            <ol>
-                <li>{{post.title}}</li>
-                <li>{{post.description}}</li>
-                <li>{{post.section}}</li>
-                <li>{{post.region}}</li>
-                <li>{{post.created_at}}</li>
-            </ol>
-            
+    <div class="btn-primary"><tr class="row">
+        <td class="column">
+        <a href="{% url 'posts:post_detail' post.id %}"><img  width="80%" height="45%" src="{% url 'posts:post_picture' post.id %}"> </a>
+            <ul>
+                <li>Title: {{post.title}}</li>
+                <li>Tarif: {{post.description}}</li>
+                <li>Bo'lim: {{post.section}}</li>
+                <li>Hudud: {{post.region}}</li>
+                <li>Joylashtirilgan: {{post.created_at}}</li>
+            </ul>            
         </td>       
         </tr>
+    </div>
         {% endfor %}
     </ul>
 </table>
@@ -31,6 +71,7 @@
     <h4 class="row">Hozircha E'lonlar mavjud emas, iltimos keyinroq yana urunib ko'ring</h4>
 {% endif %}
 </div>
+
 
 <table class="table">
 <tr>
