--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -10,7 +10,7 @@
 <div class="container">
         Hudud buyicha qidirish
         <form method="GET" action="{% url 'posts:post_by_region_list' %}">
-                <select name="region" required id="id_region">
+                <select name="region" class="select form-control" required id="id_region">
                         <option value="" selected >--Hudud--</option>
                       
                         <option value="Tashkent_city" >Toshkent shahar</option>
@@ -44,6 +44,16 @@
                 </select> 
                 <INPUT TYPE="SUBMIT" VALUE="Go!">
                 </form>
+
+
+                Bo'limlar buyicha qidirish
+                <form method="GET" action="{% url 'posts:post_by_section_list' %}">
+                        <select name="section" class="select form-control" required id="id_section">
+                            <option value="" selected>--Nima kerak?--</option> <option value="child_dress">bolalar kiyimlari</option> <option value="man_dress">erkaklar kiyimlari</option> <option value="woman_dress">ayollar kiyimlari</option> <option value="home">uy jihozlari</option> <option value="toys">o&#x27;yinchoqlar</option> <option value="books">kitoblar</option>
+                              
+                        </select> 
+                        <INPUT TYPE="SUBMIT" VALUE="Go!">
+                        </form>
 {% if post_list %}
 
 <table class="table">
