--- a/posts/templates/posts/post_form.html
+++ b/posts/templates/posts/post_form.html
@@ -9,7 +9,7 @@
                     {{form|crispy}}
                    
                     <input type="submit" value="Save">
-                    <input type="submit" value="Cancel" onclick="window.location.href='{% url 'posts:post_owned_list' %}';return false;">         
+                    <input type="submit" value="Cancel" onclick="window.location.href='post_by_section?region=any&section=any';return false;">         
             </form>
       </div>
      
